@@ -1,3 +1,7 @@
+2008-11-04  Janne Jalkanen <jalkanen@apache.org>
+
+        * Merged in from 2.8: JSPWIKI-411 & JSPWIKI-381.
+
 2008-11-03  Janne Jalkanen <jalkanen@apache.org>
 
         * Merged in changes from 2.8:
